updated about me

--- a/index.html
+++ b/index.html
@@ -101,11 +101,9 @@
                         <b><a id="about-me">About Me</a></b>
                         <hr width="300">
                         <p align="justify">
-                        I am currently a lecturer (Assist. Prof.) at the <a href="http://www.aic.ecs.soton.ac.uk">Agents, Interaction and Complexity Research Group</a>, <a href="http://www.soton.ac.uk">University of Southampton</a>.
-                        I am an admission tutor for my department (ECS), and a member of the University's Global Challenges Rresearch Fund (GCRF) Steering Committee.
-                        </p>
-                        <p>
-                        I will be joining the Dept. of Computer Science at the University of Warwick as an Associate Professor in July 2020.
+                        I am currently an Associate Professor at the <a href="https://warwick.ac.uk/fac/sci/dcs/">Department of Computer Science</a>, <a href="https://warwick.ac.uk/">University of Warwick</a>, UK.
+                        My main research area is Artificial Intelligence. I am interested in building complex learning systems where humans and agents have to either: (i) collaborate to deal with complex real-world problems; or (ii) to strategically act against each other.
+                        Given this, I mainly focus on the following topics: adversarial learning, game theory, incentive engineering, and multi-agent systems.  
                         </p>
                         <!--
                         <p>
