updated research topics in about me

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <p align="justify">
                         I am currently an Associate Professor at the <a href="https://warwick.ac.uk/fac/sci/dcs/">Department of Computer Science</a>, <a href="https://warwick.ac.uk/">University of Warwick</a>, UK.
                         My main research area is Artificial Intelligence. I am interested in building complex learning systems where humans and agents have to either: (i) collaborate to deal with complex real-world problems; or (ii) to strategically act against each other.
-                        Given this, I mainly focus on the following topics: adversarial learning, game theory, incentive engineering, and multi-agent systems.  
+                        Given this, I mainly focus on the following topics: online learning/decision making, game theory, incentive engineering, and multi-agent systems.  
                         </p>
                         <!--
                         <p>
