--- a/misc.html
+++ b/misc.html
@@ -104,6 +104,8 @@
                         <a href="https://www.youtube.com/watch?v=DQWI1kvmwRg">Michael Littman's song on Machine Learning</a> (to Michael Jackson's Thriller)<br/>
                         My sister's <a href="https://www.youtube.com/watch?v=qPOowWQjMJE">crazy song</a> from 2005. Some of my other favourites from her: <a href="https://www.youtube.com/watch?v=cLQ53zJFd5Y">1</a>, <a href="https://www.youtube.com/watch?v=pAOD8lycF3Q">2</a>, <a href="https://www.youtube.com/watch?v=vvREdKXA52E">3</a>, <a href="https://www.youtube.com/watch?v=MYhFnGIz4AY">4</a><br/>
                         <a href="http://vi.wikipedia.org/wiki/Hu%E1%BA%BF">Hu&#7871</a> - my family's hometown<br/>
+                        <a href="https://vi.wikipedia.org/wiki/%C4%90%C3%A0o_Duy_Anh">&#208&#224o Duy Anh</a> - my maternal great grandfather<br/>
+                        <a href="https://vi.wikipedia.org/wiki/Tr%E1%BA%A7n_Ti%E1%BB%85n_Th%C3%A0nh">Trần Tiễn Thành</a> - one of my ancestors<br/>
                         <hr width="300">
                         <br/>
                         </font>
