--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
                         </p>
                         <ul>
                         <li>July 2020: 1 paper accepted to <b>IROS 2020</b> (flagship robotics conference). Our first robotics paper ever!!!</li>
+                        <li>June 2020: <a href="https://www.ecs.soton.ac.uk/people/em4e15">Edoardo Manino</a> has successfully passed his PhD viva with <i>no corrections</i>! Many congrats Edoardo!!!</li>
                         <li>April 2020: 2 papers accepted to <b>IJCAI 2020</b>.</li>
                         <li>Jan 2020: One long and one short paper accepted to <b>AAMAS 2020</b>.</li>
                         <li>Nov 2019: 3 accepted papers at <b>AAAI 2020</b>.</li>
-                        <li> Oct 2019: 2 journal papers accepted for publication: one in <b>Artificial Intelligence</b>, and one in <b>Nature's Scientific Reports</b>.</li>
+                        <li> Oct 2019: 2 journal papers accepted for publication: one in <b>Artificial Intelligence</b> (with <a href="https://www.ecs.soton.ac.uk/people/em4e15">Edoardo Manino</a> and <a href="https://www.imperial.ac.uk/people/n.jennings">Nick Jennings</a>), and one in <b>Nature's Scientific Reports</b> (with <a href="https://research.tees.ac.uk/en/persons/the-anh-han">The Anh Han</a>).</li>
                         <li> Sept 2019: 2 papers accepted to <b>NeurIPS 2019</b>. </li>
-                        <li> Aug 2019: I will be a <b>local Co-Chair for KR 2021 (18th International Conference on Principles of Knowledge Representation and Reasoning)</b>, a flagship international conference on knowledge representation (will be held in Hanoi, Vietnam).</li>
+                        <li> Aug 2019: <a href="https://www.cs.nmsu.edu/~tson/">Son Tran</a> and I will be <b>Local Co-Chairs for KR 2021 (18th International Conference on Principles of Knowledge Representation and Reasoning)</b>, a flagship international conference on knowledge representation (will be held in <b>Hanoi, Vietnam</b>).</li>
 						<li> Aug 2019: I gave a talk on “Budgeted Decision Making Problems in Human-Aware AI Systems” at the <b>IJCAI-19 Early Career Spotlight Track</b>.</li>
                         <li><a href="#older-news">Older news</a> </li>
                         </ul>
