--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <b>Research:</b>
                         <ul>
                         <li><b>IJCAI 2019 Early Career Spotlight Talk</b> (invited)</li>
-						<li><b>Vice-Chancellor's Award 2018</b></li>
+						<li><b>Vice-Chancellor's Award 2018</b> (Southampton)</li>
                         <li><b>Royal Society's Kan Tong Po Visiting Fellowship 2017</b></li>   
                         <li><b>University of Southern California's CAIS Visiting Fellow 2017</b></li>   
                         <li><b><a href="http://academy.bcs.org/content/distinguished-dissertations">CPHC/BCS PhD Dissertation Award</a></b> (for the best Computer Science PhD thesis in the UK in 2012/2013), <i><b>runner-up</b></i></li>
@@ -130,8 +130,8 @@
                         <b>Teaching:</b>
                         <ul>
                         
-                        <li><b>Dean's Award 2017</b></li>
-						<li><b>Most Engaging Lecturer in 2016</b> (Faculty of Physical Sciences and Engineering)</li>
+                        <li><b>Dean's Award 2017</b> (Faculty of Physical Sciences and Engineering, Southampton) </li>
+						<li><b>Most Engaging Lecturer in 2016</b> (Southampton)</li>
                         </ul>
                         <br/>
                         
