--- a/HAL-LAB.html
+++ b/HAL-LAB.html
@@ -158,13 +158,19 @@
                         <b>Academic collaborators:</b>
                         <ul>
                             <li align="justify"><i>Bo An</i> (NTU, Singapore) - security games, multi-agent systems</li>
+                        	<li align="justify"><i>Tim Baarslag</i> (CWI/Utrecht, Netherlands) - user annoyance</li>
                         	<li align="justify"><i>Hau Chan</i> (Nebraska-Loncoln, US) - discrete optimisation, AI for social good</li>
                         	<li align="justify"><i>Fei Fang</i> (CMU, US) - security games, AI for social good</li>
+                        	<li align="justify"><i>Enrico Gerding</i> (Southampton, UK) - mechanism design for truthful machine learning</li>
                         	<li align="justify"><i>Nick Jennings</i> (Imperial College London, UK) - human-agent collectives, multi-agent systems</li>
                         	<li align="justify"><i>The Anh Han</i> (Teesside, UK) - evolutionary game theory</li>
                         	<li align="justify"><i>Md Mosaddek Khan</i> (Univ. of Dhaka, Bangladesh) - decentralised constraint optimisation</li>
                         	<li align="justify"><i>Minming Li</i> (CUHK, Hong Kong) - network games</li>
+                        	<li align="justify"><i>Tri-Dung Nguyen</i> (Southampton, UK) - game theory</li>
+                        	<li align="justify"><i>Gopal Ramchurn</i> (Southampton, UK) - demand-side management</li>
+                        	<li align="justify"><i>Alex Rogers</i> (Oxford, UK) - multi-agent systems, sensor networks</li>
                         	<li align="justify"><i>Arunesh Sinha</i> (SMU, Singapore) - empirical games</li>
+                        	<li align="justify"><i>Sebastian Stein</i> (Southampton, UK) - crowdsourcing</li>
                         	<li align="justify"><i>Milind Tambe</i> (Harvard, US) - security games, AI for social good</li>
                         	<li align="justify"><i>Danesh Tarapore</i> (Southampton, UK) - human-robot collaborative learning</li>
                         	<li align="justify"><i>Son Tran</i> (NMSU, US) - decentralised constraint optimisation, logic programming + ML</li>
@@ -179,7 +185,9 @@
                         <p>
                         <ul>
                             <li align="justify"><i>Jiarui Gan</i> (Oxford, UK) - deception in Stackelberg games</li>
+                            <li align="justify"><i>Qingyu Guo</i> (NTU, Singapore) - learning in security games</li>
                             <li align="justify"><i>Peter Key</i> (MSR Cambridge, UK) - online keyword bidding </li>
+                            <li align="justify"><i>Tiep Le</i> (NMSU, US) - home energy management </li>
                             <li align="justify"><i>Debmalya Mandal</i> (Columbia University)- blocking bandits</li>
                             <li align="justify"><i>Tao Qin</i> (MSR Asia, China) - budgeted bandits </li>
                             <li align="justify"><i>Anshuka Rangi</i> (UCSD, US) - budgeted bandits</li>
