--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                         <li>July 2020: 1 paper accepted to <b>IROS 2020</b> (flagship robotics conference). Our first robotics paper ever!!!</li>
                         <li>June 2020: <a href="https://www.ecs.soton.ac.uk/people/em4e15">Edoardo Manino</a> has successfully passed his PhD viva with <i>no corrections</i>! Many congrats Edoardo!!!</li>
                         <li>April 2020: 2 papers accepted to <b>IJCAI 2020</b>.</li>
+                        <li>March 2020: Nhat Truong has successfully passed his PhD viva with <i>minor corrections</i>! Many congrats Nhat!!!</li>
                         <li>Jan 2020: One long and one short paper accepted to <b>AAMAS 2020</b>.</li>
                         <li>Nov 2019: 3 accepted papers at <b>AAAI 2020</b>.</li>
                         <li> Oct 2019: 2 journal papers accepted for publication: one in <b>Artificial Intelligence</b> (with <a href="https://www.ecs.soton.ac.uk/people/em4e15">Edoardo Manino</a> and <a href="https://www.imperial.ac.uk/people/n.jennings">Nick Jennings</a>), and one in <b>Nature's Scientific Reports</b> (with <a href="https://research.tees.ac.uk/en/persons/the-anh-han">The Anh Han</a>).</li>
