--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <li><b>Royal Society's Kan Tong Po Visiting Fellowship 2017</b></li>   
                         <li><b>University of Southern California's CAIS Visiting Fellow 2017</b></li>   
                         <li><b><a href="http://academy.bcs.org/content/distinguished-dissertations">CPHC/BCS PhD Dissertation Award</a></b> (for the best Computer Science PhD thesis in the UK in 2012/2013), <i><b>runner-up</b></i></li>
-                        <li><b><a href="http://www.eccai.org/diss-award/current.shtml">ECCAI Artificial Intelligence Dissertation Award</a></b> (for the best European PhD thesis in artificial intelligence in 2012), <i><b>honourable mention</b></i></b></li>
+                        <li><b><a href="https://eccai.org/diss-award/2012.shtml">ECCAI Artificial Intelligence Dissertation Award</a></b> (for the best European PhD thesis in artificial intelligence in 2012), <i><b>honourable mention</b></i></b></li>
                         <li><b>AAAI 2012 Outstanding Paper Award</b>, <i>honourable mention</i></li>   
                         <li><b>ECAI 2012 Best Student Paper Award</b>, <i>runner-up</i></li>
                         </ul>
