some more edits

--- a/research.html
+++ b/research.html
@@ -233,14 +233,14 @@
                         <hr width="300">
                         <b><a id="other">Other research interests</a></b><br/>
                         <p align="justify">
-                        <i>The cost of interference to closed evolving systems:</i> We investigate what is the cost to interfere into closed systems, if we want the system to achieve some desirable states.
+                        <i>The cost of interference to closed evolving systems (joint work with The Anh Han's group from Teesside):</i> We investigate what is the cost to interfere into closed systems, if we want the system to achieve some desirable states.
                         As a first step, we look at evolving evolutionay games, where an external decision maker can invest his resources into the system (e.g., via a reward scheme) such that in the long term, the agents will follow a prefered behaviour.
                         A <a href="https://www.nature.com/articles/s41598-018-34435-2">preliminary result</a> has been published at Nature's Scientific Reports.
                         A <a href="https://research.tees.ac.uk/en/publications/fostering-cooperation-in-structured-populations-through-local-and">follow-up result</a> has been accepted to IJCAI 2018.
                         </p>
                         
                         <p align="justify">
-                        <i>Non-monetary referral incentives:</i>    
+                        <i>Non-monetary referral incentives (joint work with Victor Naroditskiy, Seb Stein, Micro Tonin, and Michael Vlassopoulos):</i>    
                         I am also investigating how non-monetary referral incentivisation work in social networks. You can find a preliminary version of our work <a href="http://ftp.iza.org/dp7995.pdf">here</a>.
                         For more details, you can visit the <a href="http://www.referral-incentives.com/">website</a> of our project, or watch a <a href="https://www.youtube.com/watch?v=ask01rHmcxk">video</a> about it.
                         We also have a <a href="https://www.aaai.org/ocs/index.php/HCOMP/HCOMP14/paper/view/8948">publication</a> at HCOMP 2014.
