--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                         <p>
                         ***************************************************************************************************************
                          <br>
-                        I am the Local Co-Chair of AAMAS 2021 in London, a top-tier international conference in AI (autonomous agents & multiagent systems) - Please consider submitting your research papers to the conference
+                        I am the Local Co-Chair of <a href="https://aamas2021.soton.ac.uk/">AAMAS 2021</a> in London, a top-tier international conference in AI (autonomous agents & multiagent systems) - 
+                        <a href="https://aamas2021.soton.ac.uk/calls/papers/">Call for Paper</a>.
+                        Please consider submitting your research paper(s) to the conference.
                         <br>
                         ***************************************************************************************************************
                         </p>
@@ -151,7 +153,7 @@
                         <hr width="300">
                         <ul>
                         <li> Aug 2019: 2 papers accepted to <b>PRICAI 2019</b> and one to <b>PRIMA 2019</b>. </li>
-                        <li>May 2019: I will be a <b>local Co-Chair for AAMAS 2021</b>, which will be in <b>London</b>!!! - PLEASE CONSIDER SUBMITTING YOUR PAPERS HERE</li>
+                        <li>May 2019: I will be a <b>local Co-Chair for <a href="https://aamas2021.soton.ac.uk/">AAMAS 2021</a></b>, which will be in <b>London</b>!!! - PLEASE CONSIDER SUBMITTING YOUR PAPERS HERE</li>
                         <li>April 2019: Two papers got accepted to <b>IJCAI 2019</b>.</li>
                         <li> April 2019: Paper on Imitative Follower Deception in Stackelberg Games got accepted to <b>ACM EC 2019</b>.</li>
                         <li>Jan 2019: Paper on Playing Green Security Games with Imperfect Prior Knowledge got accepted to <b>AAMAS 2019</b>.</li>
