--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                         My main research area is Artificial Intelligence. I am interested in building complex learning systems where humans and agents have to either: (i) collaborate to deal with complex real-world problems; or (ii) to strategically act against each other.
                         Given this, I mainly focus on the following topics: online learning/decision making, game theory, incentive engineering, and multi-agent systems.  
                         </p>
+                        
+                        <p align="justify">
+                        I usually attend/publish at the following major conferences: AAAI, AAMAS, IJCAI</br>
+                        I occasionally attend/publish at the following places: ACM EC, ICML, NeurIPS</br>
+                        I follow these conferences (i.e., I read the proceedings/I tried to submit but miserably failed/I dream one day will be able to publish a paper there): COLT, FOCS, STOC</br>
+                        </p>
                         <!--
                         <p>
                         My CV can be found <a href="bio.html">here</a>.
