--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <p align="justify">
                         I usually attend/publish at the following major conferences: AAAI, AAMAS, IJCAI</br>
                         I occasionally attend/publish at the following places: ACM EC, ICML, NeurIPS</br>
-                        I follow these conferences (i.e., I read the proceedings/I tried to submit but miserably failed/I dream one day will be able to publish a paper there): COLT, FOCS, STOC</br>
+                        I follow these conferences (i.e., I read the proceedings/tried to submit but miserably failed/dream one day I will be able to have a paper there): COLT, FOCS, STOC</br>
                         </p>
                         <!--
                         <p>
