--- a/HAL-LAB.html
+++ b/HAL-LAB.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Long Tran-Thanh - Human-Agent Learning</title>
+    <title>Long Tran-Thanh - Human-Agent Learning Research Lab</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
@@ -167,6 +167,7 @@
                         	<li align="justify"><i>Md Mosaddek Khan</i> (Univ. of Dhaka, Bangladesh) - decentralised constraint optimisation</li>
                         	<li align="justify"><i>Minming Li</i> (CUHK, Hong Kong) - network games</li>
                         	<li align="justify"><i>Tri-Dung Nguyen</i> (Southampton, UK) - game theory</li>
+                        	<li align="justify"><i>Tim Norman</i> (Southampton, UK) - trust modeling in multi-agent systems</li>
                         	<li align="justify"><i>Gopal Ramchurn</i> (Southampton, UK) - demand-side management</li>
                         	<li align="justify"><i>Alex Rogers</i> (Oxford, UK) - multi-agent systems, sensor networks</li>
                         	<li align="justify"><i>Arunesh Sinha</i> (SMU, Singapore) - empirical games</li>
