--- a/HAL-LAB.html
+++ b/HAL-LAB.html
@@ -168,6 +168,7 @@
                         	<li align="justify"><i>Minming Li</i> (CUHK, Hong Kong) - network games</li>
                         	<li align="justify"><i>Tri-Dung Nguyen</i> (Southampton, UK) - game theory</li>
                         	<li align="justify"><i>Tim Norman</i> (Southampton, UK) - trust modeling in multi-agent systems</li>
+                        	<li align="justify"><i>Zinovi Rabinovich</i> (NTU, Singapore) - security games, multi-agent systems</li>
                         	<li align="justify"><i>Gopal Ramchurn</i> (Southampton, UK) - demand-side management</li>
                         	<li align="justify"><i>Alex Rogers</i> (Oxford, UK) - multi-agent systems, sensor networks</li>
                         	<li align="justify"><i>Arunesh Sinha</i> (SMU, Singapore) - empirical games</li>
