--- a/HAL-LAB.html
+++ b/HAL-LAB.html
@@ -3,7 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>Long Tran-Thanh - Human-Agent Learning Research Lab</title>
-    <!-- Bootstrap -->
+    <meta name="description" content="Human-Agent Learning Research Lab at University of Warwick, UK (PI: Long Tran-Thanh)">
+    <meta name="keywords" content="human-agent learning, multi-agent systems, autonomous agents, game theory, mechanism design, adversarial learning, Long Tran-Thanh, Tran-Thanh">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  	<!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
