--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         Tel: +44 (0) 23 8059 3256 <br/>
                         -->
                         <br/>
-                        <a class="twitter-timeline" href="https://twitter.com/ltt_hal?ref_src=twsrc%5Etfw">Tweets by ltt_hal</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <a class="twitter-timeline" width="200" href="https://twitter.com/ltt_hal?ref_src=twsrc%5Etfw">Tweets by ltt_hal</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         
                     </div>
                     <div class="span8">
