--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                         ***************************************************************************************************************
                         </p>
                         <ul>
+                        <li>Sept 2020: 2 accepted papers at <b>NeurIPS 2020</b> Links to manuscripts available soon!</li>
                         <li>July 2020: 1 paper accepted to <b>IROS 2020</b> (flagship robotics conference). Our first robotics paper ever!!!</li>
                         <li>June 2020: <a href="https://www.ecs.soton.ac.uk/people/em4e15">Edoardo Manino</a> has successfully passed his PhD viva with <i>no corrections</i>! Many congrats Edoardo!!!</li>
                         <li>April 2020: 2 papers accepted to <b>IJCAI 2020</b>.</li>
