--- a/publications-full.html
+++ b/publications-full.html
@@ -971,7 +971,7 @@ except [8] and [60] (where the author list is in alphabetical order). The (*)
 sign is used to identify the publications in which I was one of the lead
 author(s), and the (^) sign denotes the publications where I was a PhD
 /postdoctoral supervisor of the lead author(s), or the lead author was hosted
-by me at the University of Southampton while working on the paper. <o:p></o:p></span></p>
+by me while working on the paper. <o:p></o:p></span></p>
 
 <p class=MsoNormal style='text-align:justify'><b style='mso-bidi-font-weight:
 normal'><span style='font-size:11.0pt;font-family:"Arial",sans-serif;
