--- a/publications-full.html
+++ b/publications-full.html
@@ -967,7 +967,7 @@ font-family:"Arial",sans-serif;color:black;mso-themecolor:text1'><o:p>&nbsp;</o:
 <p class=MsoNormal style='text-align:justify'><span style='font-size:11.0pt;
 font-family:"Arial",sans-serif;color:black;mso-themecolor:text1'>In the
 publication list below, the lead author is listed first in all publications
-except [8] and [60] (where the author list is in alphabetical order). The (*)
+except [9,11,14,63], where the author list is in alphabetical order. The (*)
 sign is used to identify the publications in which I was one of the lead
 author(s), and the (^) sign denotes the publications where I was a PhD
 /postdoctoral supervisor of the lead author(s), or the lead author was hosted
