--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         <li><a href="#about-me">Personal Info</a></li>
                         <li><a href="#awards">Awards</a> </li>
                         <li><a href="#media">Media</a> </li>
+                        <li><a href="CV_Tran-Thanh_full_2020.pdf">Academic CV</a> </li>
                         </ul>
                         <br/>
                         <br/>
