--- a/teaching.html
+++ b/teaching.html
@@ -81,7 +81,7 @@
                         <p align="justify">
                         <ul class="nav">
                         <li>COMP 1201 - Algorithmics - module leader (2016-2019)</li>
-                        <li>COMP 2208 - Intelligent Systems (2015-2018)</li>
+                        <li>COMP 2208 - Intelligent Systems - lecturer (2015-2018)</li>
                         <li>COMP 3222 - Machine Learning Technologies - module leader (2018-2019)</li>
                         </ul>
                         </p>
